@@ -11,6 +11,7 @@
 - compat-31: New function =completion-table-with-metadata=.
 - compat-31: New function =completion-list-candidate-at-point=.
 - compat-31: New macro =with-work-buffer=.
+- compat-31: New extended function =seconds-to-string=.
 - Drop support for Emacs 24.x. Emacs 25.1 is required now. In case
   Emacs 24.x support is still needed, Compat 30 can be used.
 
